update App.js and add success, failure web pages

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -52,7 +52,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right main-nav">
 					<li><a href="#records"class="btn btn-blue">Your Attendance Records</a></li>
-					<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">Quick Sheet</a></li>
+					<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">Create Sheet</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
