--- a/views/index.ejs
+++ b/views/index.ejs
@@ -220,7 +220,7 @@
 				</div>
 				<div class="col-sm-6 text-center-mobile">
 					<h3 class="white">About the Developer</h3>
-					<h5 class="light regular light-white">This Web App has been developed by  <a href="http://nishkarshdubb-fullstack.herokuapp.com/">Mr. Nishkarsh Dubb</a></h5>
+					<h5 class="light regular light-white"> Developed by  <a href="http://nishkarshdubb-fullstack.herokuapp.com/">Nishkarsh Dubb</a> and <a href="https://github.com/ShivangiiSharma">Shivangi Sharma</a></h5>
 			
 				</div>
 			</div>
@@ -228,13 +228,7 @@
 				<div class="col-sm-8">
 					<p>&copy; Copyright ©2020 All rights reserved | <a href="http://nishkarshdubb-fullstack.herokuapp.com/">Nishkarsh Dubb- Full Stack</a></p>
 				</div>
-				<div class="col-sm-4 text-right text-center-mobile">
-					<ul class="social-footer">
-						<li><a href="https://github.com/Nishkarsh01"><i class="fa fa-github"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/nishkarsh-dubb-0590321bb/"><i class="fa fa-linkedin "></i></a></li>
-						<li><a href="https://www.instagram.com/nishkarsh_dubb/?hl=en"><i class="fa fa-instagram "></i></a></li>
-					</ul>
-				</div>
+				
 			</div>
 		</div>
 	</footer>
