--- a/public/css/cardio.css
+++ b/public/css/cardio.css
@@ -189,6 +189,108 @@ header .typed-cursor {
 
 /****/
 
+.success {
+  position: relative;
+  width: 100%;
+  color: white;
+  background: rgba(28, 36, 65, 0.93);
+  background: url('../img/success.jpg');
+  background-size: cover;
+}
+
+.success .table {
+  display: table;
+  height: 100%;
+}
+
+.success .container {
+  height: 100%;
+}
+.success .header-text {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  color: white;
+}
+
+.success.typed {
+  display: inline-block;
+  margin: 0;
+}
+
+.success .typed-cursor {
+  font-size: 60px;
+  display: inline-block;
+  margin: 0 10px;
+  color: #00a8ff;
+  -webkit-animation-name: flash;
+  animation-name: flash;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+.layer1 {
+  margin-top: -40px;
+  margin-bottom: -40px;
+  background-color: rgba(0, 128, 0, 0.7);
+
+  width: 100%;
+}
+/***/
+
+/****/
+
+.failure {
+  position: relative;
+  width: 100%;
+  color: white;
+  background: rgba(28, 36, 65, 0.93);
+  background: url('../img/failure.jpg');
+  background-size: cover;
+}
+
+.failure .table {
+  display: table;
+  height: 100%;
+}
+
+.failure .container {
+  height: 100%;
+}
+.failure .header-text {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  color: white;
+}
+
+.failure .typed {
+  display: inline-block;
+  margin: 0;
+}
+
+.failure .typed-cursor {
+  font-size: 60px;
+  display: inline-block;
+  margin: 0 10px;
+  color: #00a8ff;
+  -webkit-animation-name: flash;
+  animation-name: flash;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+.layer2 {
+  margin-top: -40px;
+  margin-bottom: -40px;
+  background-color: rgba(255, 0, 0, 0.7);
+
+  width: 100%;
+}
+/***/
+
 a {
   text-decoration: none;
   color: #00a8ff;
